# mkdocs-gen-files

./: .gitignore  LICENSE.md  README.md  mkdocs.yml  properdocs.yml  pyproject.toml  setup.py
.github/workflows/: autofix.yml  ci.yml  deploy-docs.yml  deploy-release.yml
.tools/: ci.sh  copier-answers.yml  docs-dependencies.sh  release.sh
.tools/hooks/: pre-commit
docs/: SUMMARY.md  api.md  extras.md  gen_pages.py  index.md  requirements.in  requirements.txt
docs/assets/: script.js
docs/css/: style.css
mkdocs_gen_files/: __init__.py  config.py  config_items.py  editor.py  nav.py  plugin.py
requirements/: requirements-docs.txt  requirements-style.txt
tests/: test_editor.py  test_nav.py
tests/nav/: test_nav_basic.yml  test_nav_chaotic.yml  test_nav_empty.yml  test_nav_none.yml  test_nav_special_chars.yml  test_nav_with_index_item.yml
